<resources>
    <string name="app_name">SMIS</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="app_name_full">Smart Multimedia Informative Structure</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_acct_txt">Don\'t have an account?</string>
    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="resend_v">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="for_lecturers">(for lecturers and students)</string>
    <string name="for_students">(for students)</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="dbnode_users">users</string>
    <string name="dbnode_uploads">uploads</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="field_profile_image">profile_image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">CONFIRM</string>
    <string name="sign_out">Sign Out</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_chatroom">Type a Message</string>
    <string name="send_button">send button</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="save">save</string>
    <string name="account_settings">Account Settings</string>
    <string name="choose_file">Choose File</string>
    <string name="take_new_photo">Take New Photo</string>

    <!-- new imports-->
    <!-- Dialog Names -->
    <string name="dialog_new_chatroom">NewChatroomDialog</string>
    <string name="dialog_upload_file">UploadFileDialog</string>
    <string name="dialog_delete_chatroom">DeleteChatroomDialog</string>
    <string name="dialog_add_department">AddDepartmentDialog</string>


    <!-- Firebase Database Nodes -->
    <string name="dbnode_chatrooms">chatrooms</string>
    <string name="dbnode_quizzes">quizzes</string>
    <string name="dbnode_departments">departments</string>
    <string name="dbnode_server">server</string>


    <!-- Firebase Database Fields & Cloud Firestore Fields -->
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_user_id">user_id</string>
    <string name="field_chatroom_id">chatroom_id</string>
    <string name="field_chatroom_messages">chatroom_messages</string>
    <string name="field_message">message</string>
    <string name="field_classroom">classroom/</string>
    <string name="field_timestamp">timestamp</string>
    <string name="field_messaging_token">messaging_token</string>
    <string name="field_department">department</string>
    <string name="field_server_key">server_key</string>
    <string name="field_users">users</string>
    <string name="field_last_message_seen">last_message_seen</string>
    <string name="field_avatar">avatar</string>
    <string name="field_description">description</string>
    <string name="field_time_created">time_created</string>
    <string name="field_assignee">assignee</string>
    <string name="field_issue_type">issue_type</string>
    <string name="field_priority">priority</string>
    <string name="field_reporter">reporter</string>
    <string name="field_status">status</string>
    <string name="field_summary">summary</string>
    <string name="field_time_reported">time_reported</string>
    <string name="field_url">url</string>
    <string name="field_comment">comment</string>
    <string name="are_you_sure">Are you sure you want to delete this chatroom?</string>
    <string name="delete_chatroom">DELETE</string>
    <string name="cancel">CANCEL</string>
    <!-- Intent Extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_data_payload">intent_data_payload</string>
    <string name="intent_message">intent_data_payload</string>
    <string name="intent_project">intent_project</string>
    <string name="intent_attachments">intent_attachments</string>
    <string name="intent_project_id">intent_project_id</string>
    <string name="intent_issue_id">intent_issue_id</string>
    <string name="intent_snackbar_message">intent_snackbar_message</string>
    <string name="intent_issue">intent_issue</string>
    <string name="intent_image">intent_image</string>
    <string name="create">Create</string>
    <string name="new_chatroom_name">New Chatroom Name:</string>
    <string name="security_level">Security Level</string>
    <string name="upload_file_from_memory">upload file from memory</string>
    <string name="automata_simulation">Automata Simulation</string>
    <string name="file_thumbnail">file thumbnail</string>
    <string name="upload_button">upload button</string>
    <string name="delete_button">delete_button</string>
    <string name="download_button">download button</string>
    <string name="file_name">File Name</string>
    <string name="creator">creator</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="classroom">Classroom</string>
    <string name="quiz">Quiz</string>
    <string name="chat">Chat</string>
    <string name="automata_simulator">Automata</string>

</resources>
