<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="32dp"
            android:text="@string/app_name_full"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="28sp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginProgressBar"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:focusable="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:theme="@style/MyEditTextTheme" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:theme="@style/MyEditTextTheme" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/White"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="4dp"
                android:text="@string/dont_have_acct_txt"
                android:textColor="@color/White"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sign_up_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/White"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resend_v_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/resend_v"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>