<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reset_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:textColor="@color/White"
        android:textColorHint="@color/Grey"
        android:theme="@style/MyEditTextTheme" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/White"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/White"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>