<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/are_you_sure"
        android:textColor="@color/Black"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="15sp"
            android:text="@string/delete_chatroom"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/confirm_delete"
            tools:ignore="RelativeOverlap" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            android:id="@+id/cancel"/>

    </RelativeLayout>
</LinearLayout>