<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".views.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:paddingLeft="32dp"
            android:paddingTop="32dp"
            android:paddingRight="32dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/for_lecturers"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="14sp" />
        <ProgressBar
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpProgressBar"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:focusable="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:theme="@style/MyEditTextTheme" />

        <EditText
            android:id="@+id/password_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:theme="@style/MyEditTextTheme" />

        <EditText
            android:id="@+id/confirm_password_lec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:theme="@style/MyEditTextTheme" />

        <Button
            android:id="@+id/sign_up_btn_lec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/White"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>